--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.0",
+		"remark-frontmatter": "^5.0.0",
+		"remark-gfm": "^4.0.1",
 		"svelte": "^5.45.6",
 		"svelte-check": "^4.3.4",
 		"typescript": "^5.9.3",
